--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "29.0.0"
     defaultConfig {
         applicationId "com.ilab.checkysy"
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -57,4 +57,7 @@ dependencies {
     implementation 'org.greenrobot:greendao:3.2.2'
     implementation 'com.microsoft.azure.android:azure-storage-android:2.0.0@aar'
     implementation 'com.github.open-android:SharedPreferencesUtils:0.1.0'
+
+    implementation 'com.savvi.datepicker:rangepicker:1.3.0'
+
 }
